--- a/contrib/reprobuild/Dockerfile.noble
+++ b/contrib/reprobuild/Dockerfile.noble
@@ -45,7 +45,7 @@ RUN git clone https://github.com/pyenv/pyenv.git /root/.pyenv && \
 
 RUN wget https://bootstrap.pypa.io/get-pip.py -O /tmp/get-pip.py && python3 /tmp/get-pip.py \
     && rm /tmp/get-pip.py \
-    && pip install poetry mako grpcio-tools && \
+    && pip install poetry==2.0.1 mako grpcio-tools && \
     poetry self add poetry-plugin-export
 
 RUN wget https://sh.rustup.rs -O rustup-install.sh && \
