CI: disable the doc check for now.
It's not completely stable, which is OK, and we will solve this next release.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -480,7 +480,8 @@ jobs:
           poetry run pytest tests/ -vvv -n 2 ${PYTEST_OPTS}  ${{ matrix.PYTEST_OPTS }}
 
   update-docs-examples:
-    name: Update examples in doc schemas 
+    name: Update examples in doc schemas (disabled temporarily!)
+    if: false
     runs-on: ubuntu-22.04
     timeout-minutes: 30
     strategy:
