--- a/doc/Makefile
+++ b/doc/Makefile
@@ -158,7 +158,8 @@ NON_PREFIXED_MANPAGES := doc/lightning-cli.1 \
 	doc/lightningd.8 \
 	doc/lightningd-config.5 \
 	doc/lightningd-rpc.7 \
-	doc/lightning-hsmtool.8
+	doc/lightning-hsmtool.8 \
+	doc/lightning-reckless.1
 
 MANPAGES := $(PREFIXED_MANPAGES) $(NON_PREFIXED_MANPAGES)
 
