feat: replace poetry with uv in Makefiles
Extract package versions from pyproject.toml directly
instead of using poetry commands. Use `uv run` to execute flake8,
pytest and other Python tools consistently.

Add new make commands for uv builds

--- a/contrib/pyln-grpc-proto/Makefile
+++ b/contrib/pyln-grpc-proto/Makefile
@@ -2,7 +2,7 @@
 .PHONY: clean protos
 
 PKG=grpc
-VERSION := $(shell poetry version -s)
+VERSION := $(shell grep 'version' pyproject.toml | head -n1 | cut -d'"' -f2)
 
 PROTOS = \
 	pyln/grpc/node_pb2.py \
@@ -16,7 +16,7 @@ PROTOSRC = \
 	../../cln-grpc/proto/primitives.proto
 
 ${PROTOS} &: ${PROTOSRC}
-	python \
+	uv run \
 	  -m grpc_tools.protoc \
 	  -I ../../cln-grpc/proto \
 	  ../../cln-grpc/proto/node.proto \
@@ -39,13 +39,6 @@ ${PROTOS} &: ${PROTOSRC}
 	sed -i 's/import primitives_pb2 as primitives__pb2/from pyln.grpc import primitives_pb2 as primitives__pb2/g' pyln/grpc/node_pb2.py
 	sed -i 's/import primitives_pb2/from pyln.grpc import primitives_pb2/g' pyln/grpc/node_pb2.pyi
 	sed -i 's/import node_pb2 as node__pb2/from pyln.grpc import node_pb2 as node__pb2/g' pyln/grpc/node_pb2_grpc.py
-
-# Having versions in two places sucks, but so does every other option :(
-# See https://github.com/python-poetry/poetry/issues/144
-upgrade-version:
-	if [ -z "$(NEW_VERSION)" ]; then echo "Set NEW_VERSION!" >&2; exit 1; fi
-	poetry version $(NEW_VERSION)
-	sed 's/^__version__ = .*/__version__ = "$(NEW_VERSION)"/' < pyln/$(PKG)/__init__.py > pyln/$(PKG)/__init__.py.new && mv pyln/$(PKG)/__init__.py.new pyln/$(PKG)/__init__.py
 
 protos: ${PROTOS}
 
