--- a/contrib/pyln-testing/Makefile
+++ b/contrib/pyln-testing/Makefile
@@ -1,7 +1,7 @@
 #!/usr/bin/make
 
 PKG=testing
-VERSION := $(shell poetry version -s)
+VERSION := $(shell grep 'version' pyproject.toml | head -n1 | cut -d'"' -f2)
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
@@ -19,29 +19,19 @@ check-source: check-flake8 check-mypy check-version
 
 # We want to create an env for this directory.
 check-version:
-	poetry env remove -q python3 || true
-	poetry env use python3
-	poetry install
-	[ "`poetry run python3 -c 'from pyln import $(PKG); print($(PKG).__version__)'`" = "$(VERSION)" ] || exit 1
+	[ "`uv run python3 -c 'from pyln import $(PKG); print($(PKG).__version__)'`" = "$(VERSION)" ] || exit 1
 
 check-flake8:
-	flake8 --ignore=E501,E731,W503,E741  --exclude '*_pb2*.py,grpc2py.py' pyln tests
+	uv run flake8 --ignore=E501,E731,W503,E741  --exclude '*_pb2*.py,grpc2py.py' pyln tests
 
 check-pytest:
-	pytest tests
+	uv run pytest tests
 
 check-mypy:
 #	MYPYPATH=$(PYTHONPATH) mypy --namespace-packages --follow-imports=skip tests pyln
 
-# Having versions in two places sucks, but so does every other option :(
-# See https://github.com/python-poetry/poetry/issues/144
-upgrade-version:
-	if [ -z "$(NEW_VERSION)" ]; then echo "Set NEW_VERSION!" >&2; exit 1; fi
-	poetry version $(NEW_VERSION)
-	sed 's/^__version__ = .*/__version__ = "$(NEW_VERSION)"/' < pyln/$(PKG)/__init__.py > pyln/$(PKG)/__init__.py.new && mv pyln/$(PKG)/__init__.py.new pyln/$(PKG)/__init__.py
-
 $(SDIST_FILE) $(BDIST_FILE):
-	poetry build
+	uv build
 
 prod-release: check-version $(ARTEFACTS)
-	poetry publish
+	uv publish
