python: upgrade grpcio-tools to 1.69.0 and protobuf to 5.29.4 for python3.13 compatibility
Changelog-None

--- a/contrib/pyln-grpc-proto/pyproject.toml
+++ b/contrib/pyln-grpc-proto/pyproject.toml
@@ -18,7 +18,7 @@ include = [
 [tool.poetry.dependencies]
 python = "^3.8"
 grpcio = "*"
-protobuf3 = "*"
+protobuf = "5.29.4"
 
 [tool.poetry.group.dev.dependencies]
 grpcio = "*"
