fuzz-tests: add a test for handle_peer_error_or_warning()
Changelog-None: `handle_peer_error_or_warning()` in
`common/read_peer_message.{c, h}` is responsible for parsing any
incoming `error` or `warning` messages as defined in BOLT #1.

Add a test for it.

--- a/tests/fuzz/Makefile
+++ b/tests/fuzz/Makefile
@@ -73,5 +73,11 @@ FUZZ_COMMON_OBJS := \
 $(FUZZ_TARGETS_OBJS): $(COMMON_HEADERS) $(WIRE_HEADERS) $(COMMON_SRC)
 $(FUZZ_TARGETS_BIN): $(LIBFUZZ_OBJS) $(FUZZ_COMMON_OBJS) $(BITCOIN_OBJS)
 
+tests/fuzz/fuzz-error-warning:	common/peer_billboard.o		\
+				common/wire_error.o		\
+				common/peer_io.o		\
+				common/read_peer_msg.o		\
+				common/peer_status_wiregen.o
+
 ALL_C_SOURCES += $(FUZZ_TARGETS_SRC) $(LIBFUZZ_SRC)
 ALL_FUZZ_TARGETS += $(FUZZ_TARGETS_BIN)
