fuzz-tests: Add a test for `check_ping_make_pong()`
Changelog-None: `check_ping_make_pong()` in `common/ping.{c, h}`
is responsible for checking incoming ping messages and writing
pong ones, if needed.

Since it consumes untrusted data in the form of ping messages,
add a test for it.

--- a/tests/fuzz/Makefile
+++ b/tests/fuzz/Makefile
@@ -51,6 +51,7 @@ FUZZ_COMMON_OBJS := \
 	common/msg_queue.o				\
 	common/node_id.o				\
 	common/permute_tx.o				\
+	common/ping.o					\
 	common/psbt_keypath.o				\
 	common/sciddir_or_pubkey.o			\
 	common/setup.o					\
