fuzz-tests: Add a test for `tlv_span()`
Changelog-None: `tlv_span()` in `common/bolt12.c` parses untrusted
input in the form of a `u8 *tlvstream`. Add a test for it.

--- a/tests/fuzz/Makefile
+++ b/tests/fuzz/Makefile
@@ -72,5 +72,7 @@ FUZZ_COMMON_OBJS := \
 $(FUZZ_TARGETS_OBJS): $(COMMON_HEADERS) $(WIRE_HEADERS) $(COMMON_SRC)
 $(FUZZ_TARGETS_BIN): $(LIBFUZZ_OBJS) $(FUZZ_COMMON_OBJS) $(BITCOIN_OBJS)
 
+tests/fuzz/fuzz-bolt12-tlvspan: common/bolt12.o
+
 ALL_C_SOURCES += $(FUZZ_TARGETS_SRC) $(LIBFUZZ_SRC)
 ALL_FUZZ_TARGETS += $(FUZZ_TARGETS_BIN)
