common/test: Add a test to trigger the bug
Add a test in `common/test/run-wireaddr.c` that reproduces the
out-of-bounds error when the fix is not applied.

--- a/common/test/Makefile
+++ b/common/test/Makefile
@@ -128,4 +128,6 @@ common/test/run-htable:					\
 
 common/test/run-shutdown_scriptpubkey: wire/towire.o wire/fromwire.o
 
+common/test/run-wireaddr: wire/towire.o wire/fromwire.o
+
 check-units: $(COMMON_TEST_PROGRAMS:%=unittest/%)
