meta: update changelog for v25.05
Changelog-None

--- a/plugins/wss-proxy/pyproject.toml
+++ b/plugins/wss-proxy/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "wss-proxy"
-version = "25.05rc1"
+version = "25.05"
 description = "Web secure socket proxy"
 authors = ["ShahanaFarooqui <sfarooqui@blockstream.com>"]
 
