fuzz-tests: Add a test for `fundee_channel()`
Changelog-None: `fundee_channel()` in `openingd/openingd.c` is
responsible for handling incoming `open_channel` messages from a
peer. Since it deals with external input, add a test for it.

--- a/tests/fuzz/Makefile
+++ b/tests/fuzz/Makefile
@@ -11,6 +11,7 @@ tests/fuzz/fuzz-bolt12-*.o: tests/fuzz/bolt12.h
 
 tests/fuzz/fuzz-handle_onion_message: connectd/onion_message.o connectd/connectd_wiregen.o
 tests/fuzz/fuzz-full_channel: channeld/full_channel.o channeld/commit_tx.o
+tests/fuzz/fuzz-open_channel: hsmd/hsmd_wiregen.o openingd/common.o openingd/openingd_wiregen.o
 
 FUZZ_TARGETS_SRC := $(wildcard tests/fuzz/fuzz-*.c)
 FUZZ_TARGETS_OBJS := $(FUZZ_TARGETS_SRC:.c=.o)
