cln-bip353: add plugin that fetches payment instructions from human readable addresses
Changelog-Add: new plugin cln-bip353 that can fetch BIP-353 payment instructions from human readable addresses

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ members = [
     "plugins/rest-plugin",
     "plugins/lsps-plugin",
     "plugins/wss-proxy-plugin",
+    "plugins/bip353-plugin",
 ]
